[package]
name = "demo"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Toy project from https://github.com/dtolnay/cxx"
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false
repository = "https://github.com/dtolnay/cxx"

[dependencies]
cxx = { path = "../", version = "1.0.94" }

[build-dependencies]
cxx-build = { path = "../gen/build", version = "1.0.94" }